# SC4PIM-X

./: .gitignore  NOTICE  README.md  README_MODERNIZATION.md  SC4PIMX.manifest  SC4PIMX.spec  hatch_build.py  pyproject.toml  requirements.txt
.ai/extra-info/: FSHReader.cpp  QFSDecompressor.cpp
.github/workflows/: build.yml  ci.yml  release.yml
assets/: config.toml  new_properties.xml  transit_switch_presets.toml
assets/lang/: de.toml  en.toml
assets/lighting/: README.md
hooks/: hook-OpenGL.py
scripts/: extract_category_translations.py  import_transit_presets.py  run_sc4pimx.py
src/sc4pimx/: ATCReader.py  ATCViewer.py  ConvertLotBuildingDlg.py  CustomTreeCtrl.py  DependenciesDlg.py  DependencyCatalog.py  FSHConverter.py  FSHReader.py  QFS.py  QFSDecompressor.py  S3DReader.py  S3DShaders.py  S3DTexturesHolder.py  S3DViewer.py  SC4BuildingSubmenuPicker.py  SC4CityContext.py  SC4CurveEditor.py  SC4DatTools.py  SC4Data.py  SC4DataFunctions.py  SC4IconMakerDlg.py  SC4LETools.py  SC4LightingProfiles.py  SC4LotPreview.py  SC4Matrix.py  SC4OpenGL.py  (+31 more)
tests/: test_bool_property_text.py  test_category_props_for_preset.py  test_category_translation_catalog.py  test_city_context.py  test_cohort_choice_sorting.py  test_config_startup.py  test_convert_lot_building.py  test_curve_editor.py  test_dependencies_dialog_catalog.py  test_dependency_catalog.py  test_growable_lot_menu.py  test_lighting_profiles.py  test_lot_object_selection.py  test_plop_lot_creation.py  test_prop_marker_color.py  test_prop_timing.py  test_qfs.py  test_s3d_reader.py  test_sc4path_picker.py  test_sc4path_reader.py  test_signed_property_hex.py  test_structured_property_editors.py  test_textutil.py  test_transit_preset_registry.py  test_transit_presets.py  test_transit_switch_tools.py  test_virtual_dat_finalize.py
(+2 files in other folders)
