[project]
name = "sc4pim-x"
version = "2026.4b"
description = "SimCity 4 Plugin Manager Extended - Decompiled and Modernized"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "All rights reserved" }
authors = [
    { name = "Wouanagaine" },
    { name = "CasperVg" }
]
keywords = ["simcity4", "sc4", "modding", "plugin-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "wxPython>=4.2.0",
    "pillow>=12.2.0",
    "numpy>=1.24.0,!=2.4.0",
    "PyOpenGL>=3.1.0",
    "PyOpenGL-accelerate>=3.1.0",
    "pywin32>=306; sys_platform == 'win32'",
    "tomlkit>=0.15.0",
]

[project.scripts]
sc4pimx = "sc4pimx.SC4PIMApp:main"

[dependency-groups]
dev = [
    "black>=26.3.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sc4pimx"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # Line too long (handled by black)
    "F403",  # `from module import *` used (legacy decompiled modules)
    "F405",  # name may be undefined from star imports (legacy decompiled modules)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
